# gptuesdays-fastapi

./: README.md  pyproject.toml
gptuesdays/: constants.py  main.py
gptuesdays/social_media/: router.py
src/: main.py
